[CacheStorage] Check doomed caches first when dropping cache handles

When the last cache handle is dropped, first check if it's a doomed cache
object before removing the cache from the active cache map. Previously we were
checking the other way around, which caused the active cache to be deleted (in
the event that a new cache was created with the same name) instead of the doomed
one.

BUG=631467

Review-Url: https://codereview.chromium.org/2179353003
Cr-Commit-Position: refs/heads/master@{#407850}

Former-commit-id: 956d7aca53f56b5cff228af586ea2e5f895f2e9b